--- a/integrations/rocket/Cargo.toml
+++ b/integrations/rocket/Cargo.toml
@@ -16,7 +16,7 @@ categories = ["network-programming", "asynchronous"]
 [dependencies]
 async-graphql = { path = "../..", version = "2.9.8" }
 
-rocket = { version = "0.5.0-rc.1", default-features = false }
+rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", default-features = false }
 serde = "1.0.126"
 serde_json = "1.0.64"
 tokio-util = { version = "0.6.7", default-features = false, features = ["compat"] }
